--- a/styles/small.css
+++ b/styles/small.css
@@ -76,8 +76,9 @@ ul li {
     color: white;
     display: block;
     padding: .8rem 10px;
-    background-color: var(--dusty-olive);
+    background-color: rgba(15, 15, 15, 0.801);
     border-bottom: 1px solid white;
+    
 }
 
 .navigation a:hover {
